XO_Project_UAT/Project--XOGrp--UAT/src/objects/Zuora__CustomerAccount__c.object
<CustomObject>
    <description>Zuora Billing Account object.  An account is a customer account that collects all of the critical information about the customer, such as contact information, payment terms, and payment methods. You can use a customer account to track subscriptions, amendments, and transactions, such as invoices and payments.</description>
    <fields>
        <fullName>AccountStatus__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ach_Account_Number__c</fullName>
        <description>SF-722</description>
        <formula>Zuora__Default_Payment_Method__r.Zuora__AchAccountNumberMask__c</formula>
        <label>Ach Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Past_Due__c</fullName>
        <label>Amount Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field will hold the lookup relationship for the Bill To Contact that is being used to sync Bill To information to Zuora.</description>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bill To Billing Accounts</relationshipLabel>
        <relationshipName>Bill_To_Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name_Mirror__c</fullName>
        <description>SF-721 Bill to Name</description>
        <formula>Zuora__BillToName__c</formula>
        <label>Bill To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSS_Email__c</fullName>
        <label>CBSS Email</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSS_Name__c</fullName>
        <description>CSP-596</description>
        <label>CBSS Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSS_Phone__c</fullName>
        <label>CBSS Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSS_SalesRepId__c</fullName>
        <description>CSP-596</description>
        <label>CBSS SalesRepId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCard_ACH_Number__c</fullName>
        <description>SF-722</description>
        <formula>if( Zuora__DefaultPaymentMethod__c = &apos;CreditCard&apos;, Zuora__CreditCard_Number__c,
   if( Zuora__DefaultPaymentMethod__c = &apos;ACH&apos;, Ach_Account_Number__c, &apos;&apos; )
 )</formula>
        <label>CreditCard/ACH Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditHold__c</fullName>
        <description>Credit Hold Value from zuora customer account. SF-2064</description>
        <label>Credit Hold</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <description>SF-1534.  Revisited SF-2064</description>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANKRUPTCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC CHARGEBACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNCXLD BAD PAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREDIT HOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REG/NAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUT OF BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEST ACCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH RETURN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NeedToUpdateAccountDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-1603</description>
        <label>NeedToUpdateAccountDetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NeedToUpdateCBSS__c</fullName>
        <description>CSP-596 (uses SalesRepId instead of Name because a User&apos;s name can change, while a SalesRepId is in theory the same forever)</description>
        <formula>IF(
	(
		(ISBLANK(CBSS_SalesRepId__c))
		||
		(CBSS_SalesRepId__c == &apos;n/a&apos; &amp;&amp; NOT(ISBLANK(Zuora__Account__r.CBBS__r.SalesRepID__c)))
		||
		(CBSS_SalesRepId__c &lt;&gt; &apos;n/a&apos; &amp;&amp; ISBLANK(Zuora__Account__r.CBBS__r.SalesRepID__c))
		||
		(CBSS_SalesRepId__c &lt;&gt; &apos;n/a&apos; &amp;&amp; NOT(ISBLANK(Zuora__Account__r.CBBS__r.SalesRepID__c)) &amp;&amp; CBSS_SalesRepId__c &lt;&gt; Zuora__Account__r.CBBS__r.SalesRepID__c)	
	) 
	|| 
	(
		(ISBLANK(CBSS_Name__c))
		||
		(CBSS_Name__c == &apos;n/a&apos; &amp;&amp; NOT(ISBLANK(Zuora__Account__r.CBBS__c)))
		||
		(CBSS_Name__c &lt;&gt; &apos;n/a&apos; &amp;&amp; ISBLANK(Zuora__Account__r.CBBS__c))
		||
		(CBSS_Name__c &lt;&gt; &apos;n/a&apos; &amp;&amp; NOT(ISBLANK(Zuora__Account__r.CBBS__c)) &amp;&amp; CBSS_Name__c &lt;&gt; Zuora__Account__r.CBBS__r.FirstName + &apos; &apos; + Zuora__Account__r.CBBS__r.LastName)
	)
    ||
	(NOT(ISBLANK(Zuora__Account__r.CBBS__c)) &amp;&amp; CBSS_Email__c &lt;&gt; Zuora__Account__r.CBBS__r.Email)
	||
	(NOT(ISBLANK(Zuora__Account__r.CBBS__c)) &amp;&amp; NOT(ISBLANK(Zuora__Account__r.CBBS__r.Phone)) &amp;&amp; CBSS_Phone__c &lt;&gt; Zuora__Account__r.CBBS__r.Phone)
	||
	(ISBLANK(Zuora__Account__r.CBBS__c) &amp;&amp; CBSS_Phone__c &lt;&gt; Zuora__Account__r.CBSS_Phone__c)
	,
	TRUE, 
	FALSE
)</formula>
        <label>NeedToUpdateCBSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NeedToUpdateCreditHold__c</fullName>
        <description>SF-1534, SF-2064.</description>
        <formula>IF(TEXT(CreditHold__c) &lt;&gt; TEXT(Zuora__Account__r.CreditHold__c), TRUE, FALSE)</formula>
        <label>NeedToUpdateCreditHold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NeedToUpdateCustomerType__c</fullName>
        <description>SF-1534, SF-2064.</description>
        <formula>IF(OR(AND(ISBLANK(TEXT(Zuora__Account__r.Customer_Type__c)), TEXT(Customer_Type__c) &lt;&gt; &quot;NONE&quot;), AND(NOT(ISBLANK(TEXT(Zuora__Account__r.Customer_Type__c))), TEXT(Customer_Type__c) &lt;&gt; TEXT(Zuora__Account__r.Customer_Type__c))), TRUE, FALSE)</formula>
        <label>NeedToUpdateCustomerType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NeedToUpdateSoldToContact__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SF-2177. If checked, the &quot;Sold To Contact&quot; information on this Billing Account (Zuora__CustomerAccount__c) needs to be populated with information from Zuora.</description>
        <label>NeedToUpdateSoldToContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SoldToAddress1__c</fullName>
        <description>SF-2177</description>
        <label>Sold To Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToAddress2__c</fullName>
        <description>SF-2177</description>
        <label>Sold To Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToCity__c</fullName>
        <description>SF-2177</description>
        <label>Sold To Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToCountry__c</fullName>
        <description>SF-2177</description>
        <label>Sold To Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToPostalCode__c</fullName>
        <description>SF-2177</description>
        <label>Sold To Address Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToState__c</fullName>
        <description>SF-2177</description>
        <label>Sold To Address State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field will hold the lookup relationship for the Sold To Contact that is being used to sync Sold To information to Zuora.</description>
        <label>Sold To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sold To Billing Accounts</relationshipLabel>
        <relationshipName>Sold_To_Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZDU_RetrieveSoldToContactFailureCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CSP-1659</description>
        <label>ZDU - RetrieveSoldToContactFailureCount</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZDU_RetrieveSoldToContact__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CSP-1659</description>
        <label>ZDU - RetrieveSoldToContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZDU_UpdateAccountFailureCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CSP-1659</description>
        <label>ZDU - UpdateAccountFailureCount</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZDU_UpdateAccount__c</fullName>
        <description>CSP-1659</description>
        <formula>NeedToUpdateCreditHold__c || NeedToUpdateAccountDetails__c || NeedToUpdateCBSS__c || NeedToUpdateCustomerType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZDU - UpdateAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZDU_UpdateContactsFailureCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CSP-1659</description>
        <label>ZDU - UpdateContactsFailureCount</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZDU_UpdateContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-1659</description>
        <label>ZDU - UpdateContacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>R00N40000001kyLcEAI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zuora__AdditionalEmailAddresses__c</fullName>
        <label>Additional Email Addresses</label>
        <length>2768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__AllowInvoiceEdit__c</fullName>
        <description>Indicates if associated invoices can be edited.</description>
        <label>Allow Invoice Edit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__AutoPay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__Balance__c</fullName>
        <label>Bill To Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__Batch__c</fullName>
        <label>Batch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BcdSettingOption__c</fullName>
        <description>If you want to automatically set the BCD to the same day as
the triggering date of the account&apos;s first recurring charge, then set
the optional field, BcdSettingOption to AutoSet</description>
        <label>Bcd Setting Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillCycleDay__c</fullName>
        <label>Bill Cycle Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillToAddress1__c</fullName>
        <label>Bill To Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillToAddress2__c</fullName>
        <label>Bill To Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillToCity__c</fullName>
        <label>Bill To Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillToCountry__c</fullName>
        <label>Bill To Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillToFax__c</fullName>
        <label>Bill To Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zuora__BillToId__c</fullName>
        <label>Bill To Contact Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillToName__c</fullName>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillToPostalCode__c</fullName>
        <label>Bill To Address Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillToState__c</fullName>
        <label>Bill To Address State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillToWorkEmail__c</fullName>
        <label>Bill To Work E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Zuora__BillToWorkPhone__c</fullName>
        <label>Bill To Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zuora__CommunicationProfileId__c</fullName>
        <label>Communication Profile Id (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Communication_Profile_Id__c</fullName>
        <label>Communication Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditBalance__c</fullName>
        <defaultValue>0.000000000</defaultValue>
        <description>Credit balance of Billing Account field in Zuora</description>
        <label>Credit Balance( Deprecated )</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardExpiration__c</fullName>
        <description>payment method Credit Card Expiration</description>
        <label>Credit Card Expiration( Deprecated )</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardNumber__c</fullName>
        <description>zuora payment method credit card number.</description>
        <label>Credit Card Number( Deprecated )</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCardType__c</fullName>
        <formula>IF(  ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardType__c, &quot;AmericanExpress&quot;),  &quot;AmericanExpress&quot;,
IF(  ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardType__c, &quot;Discover&quot;), &quot; Discover&quot;, 
IF(  ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardType__c, &quot;MasterCard&quot;), &quot;MasterCard&quot;,
IF(  ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardType__c, &quot;Visa&quot;), &quot;Visa&quot;,  &quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Card Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCard_Expiration__c</fullName>
        <formula>IF (   OR( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c , &quot;CreditCard&quot;) ,   ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c , &quot;DebitCard&quot;) ),

(IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;1&quot;) , &quot;01&quot;,  IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;2&quot;) , &quot;02&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;3&quot;) , &quot;03&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;4&quot;) , &quot;04&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;5&quot;) , &quot;05&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;6&quot;) , &quot;06&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;7&quot;) , &quot;07&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;8&quot;) , &quot;08&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;9&quot;) , &quot;09&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;10&quot;) , &quot;10&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;11&quot;) , &quot;11&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;12&quot;) , &quot;12&quot;, &quot;&quot;))))))))))))

&amp; &quot;/&quot; &amp; Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationYear__c), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Card Expiration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditCard_Number__c</fullName>
        <formula>Zuora__Default_Payment_Method__r.Zuora__CreditCardMaskNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Card Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Credit_Balance__c</fullName>
        <description>The total credit balance for the account in Currency representation.</description>
        <inlineHelpText>The total credit balance for the account in Currency representation.</inlineHelpText>
        <label>Credit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CustomerServiceRepName__c</fullName>
        <label>CSR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__DefaultPaymentMethod__c</fullName>
        <label>Default Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Default_Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Payment Method</label>
        <referenceTo>Zuora__PaymentMethod__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__EntityID__c</fullName>
        <label>Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__InvoiceDeliveryPrefsEmail__c</fullName>
        <description>Indicates if the customer wants to receive invoices through email.</description>
        <label>Invoice Delivery Prefs Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__InvoiceDeliveryPrefsPrint__c</fullName>
        <description>Indicates if the customer wants to receive printed invoices, such as through postal mail.</description>
        <label>Invoice Delivery Prefs Print</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__InvoiceTemplateId__c</fullName>
        <description>The ID of the invoice template.</description>
        <label>Invoice Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Is_Crm_Id_Change_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Crm Id Change Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__LastInvoiceDate__c</fullName>
        <label>Last Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__MRR__c</fullName>
        <label>CMRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__Notes__c</fullName>
        <description>Use this field to record comments about the account.</description>
        <label>Notes</label>
        <length>75535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Child Billing Accounts</relationshipLabel>
        <relationshipName>Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__PaymentGateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Gateway</label>
        <referenceTo>Zuora__PaymentGateway__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__PaymentMethodType__c</fullName>
        <description>zuora payment method type.</description>
        <label>Credit Card Type( Deprecated)</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PaymentMethod_Type__c</fullName>
        <formula>IF (  ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c, &quot;ACH&quot;), &quot;ACH&quot;,
   IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c, &quot;BankTransfer&quot;), &quot;Bank Transfer&quot;, 
       IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c, &quot;Cash&quot;), &quot;Cash&quot;,     
         IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c, &quot;Check&quot;), &quot;Check&quot;, 
           IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c, &quot;CreditCard&quot;), &quot;Credit Card&quot;, 
                IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c, &quot;CreditCardReferenceTransaction&quot;), &quot;Credit Card  Reference Transaction&quot;, 
                    IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c, &quot;DebitCard&quot;), &quot;Debit Card&quot;, 
                       IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c, &quot;Other&quot;), &quot;Other&quot;, 
                                IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c, &quot;PayPal&quot;), &quot;PayPal&quot;, 
                                   IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c, &quot;WireTransfer&quot;), &quot;Wire Transfer&quot;,  &quot;&quot;
                                     )
                                )
                         )
                     )
                )
         )
    )
  )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PaymentTerm__c</fullName>
        <label>Payment Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Payment_Term_Formula__c</fullName>
        <formula>IF( ISBLANK(Zuora__Payment_Term__c) ,  Zuora__PaymentTerm__c,  HYPERLINK( Zuora__Payment_Term__r.Id , Zuora__Payment_Term__r.Name) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Term</label>
        <referenceTo>Zuora__PaymentTerm__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__PurchaseOrderNumber__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SalesRepName__c</fullName>
        <label>Sales Representative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SoldToAddress1__c</fullName>
        <label>Sold To Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SoldToAddress2__c</fullName>
        <label>Sold To Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SoldToCity__c</fullName>
        <label>Sold To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SoldToCountry__c</fullName>
        <label>Sold To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SoldToFax__c</fullName>
        <label>Sold To Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zuora__SoldToId__c</fullName>
        <label>Sold To Contact Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SoldToName__c</fullName>
        <label>Sold To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SoldToPostalCode__c</fullName>
        <label>Sold To Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SoldToState__c</fullName>
        <label>Sold To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SoldToWorkEmail__c</fullName>
        <label>Sold To Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Zuora__SoldToWorkPhone__c</fullName>
        <label>Sold To Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zuora__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxExemptCertificateID__c</fullName>
        <description>The ID of your customer&apos;s tax exemption certificate.</description>
        <label>Tax Exempt Certificate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxExemptCertificateType__c</fullName>
        <description>The type of the tax exemption certificate that your customer holds.</description>
        <label>Tax Exempt Certificate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxExemptDescription__c</fullName>
        <description>A description of the tax exemption certificate that your customer holds.</description>
        <label>Tax Exempt Description</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxExemptEffectiveDate__c</fullName>
        <description>The date when the the customer&apos;s tax exemption starts.</description>
        <label>Tax Exempt Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxExemptExpirationDate__c</fullName>
        <description>The date when the customer&apos;s tax exemption certificate expires.</description>
        <label>Tax Exempt Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxExemptIssuingJurisdiction__c</fullName>
        <description>Indicates the jurisdiction in which the customer&apos;s tax exemption certificate was issued.</description>
        <label>Tax ExemptIssuing Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxExemptStatus__c</fullName>
        <description>The status of the account&apos;s tax exemption.</description>
        <label>Tax Exempt Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TotalInvoiceBalance__c</fullName>
        <description>The total balance of the account&apos;s invoices.</description>
        <label>Total Invoice Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__Zuora_Id__c</fullName>
        <description>The Zuora Id (external primary key) of this Billing Account.</description>
        <inlineHelpText>The Zuora Id (external primary key) of this Billing Account.</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Billing Account</label>
    <listViews>
        <fullName>Zuora__All</fullName>
        <columns>NAME</columns>
        <columns>Zuora__Balance__c</columns>
        <columns>Zuora__Credit_Balance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>